--- a/css/My-Webpage.css
+++ b/css/My-Webpage.css
@@ -24,7 +24,7 @@ hr.style-eight {
     padding: 0;
     border: none;
     border-top: medium double #333;
-    color: #ffb50a;
+    color: #ffffff;
     text-align: center;
 }
 hr.style-eight:after {
