--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+/*html{*/
+/*    sizes to make things always this size on any size screen*/
+/*}*/
 * {
     margin: 0;
     padding: 0;
@@ -53,7 +56,7 @@ hr.style-eight:after {
     color: white;
 }
 #info-bar img {
-    height: 40px;
+    height: 100px;
     width: auto;
 
 }
@@ -123,7 +126,7 @@ hr.style-eight:after {
 }
 
 a {
-    color: darkred;
+    color: #ffd88a;
 }
 
 /* [ANIMATION] */
