christmas project progress

--- a/css/christmas-break.css
+++ b/css/christmas-break.css
@@ -1,7 +1,8 @@
+body{
+    background-image: url("../images/x-mas-background2.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 #header{
     color: red;
-}
-.jumbotron-fluid {
-    background-image: url("../images/x-mas-header.jpg");
-    background-size: cover;
 }
